List of indications created

--- a/src/App.sass
+++ b/src/App.sass
@@ -66,3 +66,23 @@ body
     border-color: $logo-red 
   .bd-BLUE
     border-color: $logo-blue 
+
+  .btn-primary
+    background: $button-primary
+    &:hover
+      background: $button-primary-hover
+
+.MuiButton-root, .MuiTab-root
+  text-transform: initial !important
+
+.MuiFormLabel-root
+  color: $dark-04 !important
+
+.MuiInputBase-root
+  color: $white !important
+  font-size: 0.9rem !important
+
+  &.MuiInput-underline:before, &.MuiInput-underline:after
+    border-color: $dark-03 !important
+  .MuiIconButton-root
+    color: $dark-03 !important
