--- a/src/assets/sass/variables.sass
+++ b/src/assets/sass/variables.sass
@@ -20,7 +20,7 @@ $blue-01: #2d467b;
 
 $danger: #F44336;
 $warning: #FDB100;
-$sucess: #01C05D;
+$success: #01C05D;
 
 $orange: #F86C2F;
 $green: #01C05D;
@@ -44,10 +44,15 @@ $logo-blue: #436AB1;
 $logo-blue-secondary: #213457
 
 $button-primary: #29BF44;
+$button-primary-hover: #11a52c;
 // END COLORS
 
 // DEFAULT
 $radius-default: 5px
+$padding-default: 20px
+$padding-half: 10px
+$margin-default: 20px
+$margin-half: 10px
 
 // MEASURES
 $screen-xs: 480px
