--- a/src/modules/pages/home/home.component.sass
+++ b/src/modules/pages/home/home.component.sass
@@ -103,6 +103,13 @@
                   color: $logo-green 
                 &.more-details
                   color: $logo-blue 
+              .active
+                &.watch-later
+                  color: $logo-pink 
+                &.indicate-now 
+                  color: $logo-green 
+                &.more-details
+                  color: $logo-blue 
 
             button 
               &.active 
