Global loading and login added

--- a/src/modules/shared-components/modal/modal.component.sass
+++ b/src/modules/shared-components/modal/modal.component.sass
@@ -41,6 +41,10 @@
 
       &:hover
         background: #3055a2
+
+      .MuiCircularProgress-root
+        width: 30px !important
+        height: 30px !important
         
       .MuiSvgIcon-root
         font-size: 30px
