--- a/src/App.sass
+++ b/src/App.sass
@@ -9,6 +9,20 @@ body
   color: $white
   background: $dark-02
 
+  &::-webkit-scrollbar 
+    width: 10px
+    height: 10px
+
+  &::-webkit-scrollbar-track 
+    background-color: $dark-03
+
+  &::-webkit-scrollbar-thumb
+    border-radius: 5px
+    background-color: $blue-00
+
+    &:hover 
+      background-color: $blue-01
+
   main
     margin: 20px auto
     width: 90%
