--- a/src/modules/shared-components/loading/loading.component.sass
+++ b/src/modules/shared-components/loading/loading.component.sass
@@ -6,6 +6,20 @@
   width: 100%
   text-align: center
 
+  &.global-loading 
+    position: fixed
+    z-index: 999
+    margin: 0
+    top: 0
+    height: 100vh
+    display: none
+    align-items: center
+    justify-content: center
+    background: rgba(0, 0, 0, 0.85)
+
+    &.isActive
+      display: flex
+
   .loading-bar 
     display: inline-block
     position: relative
